# Liquid-CLI

./: .gitignore  LFM2_Terminal_Agent_Colab.ipynb  README.md  ds_config.json  evaluate.py  evaluate_vllm.py  export_model.py  prepare_data.py  requirements.txt  setup_vessl.sh  train_gdpo.py  train_sft.py  train_unsloth.py  train_unsloth_processed.py
docs/: LFM2_Terminal_RLVR_Training_Guide.md  cli_implementation_plan.md  cli_roadmap.md  eval_results.json  gdpo_fp8_plan.md  project_refactoring_plan.md
liquid-cli/: README.md  error_log.json  log_20231025.json  main.py  pyproject.toml  user_activity.json
liquid-cli/src/liquid_cli/: engine.py  executor.py  main.py  model_manager.py  ui.py
scripts/: prepare_tokenized_data.py  upload_data.py
